alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -363,7 +363,7 @@ img {
 
     .nav-elements .dropdown-toggle,
     .nav-elements ul li a {
-        font-size: 12px;
+        font-size: 11px;
     }
 
     .nav-elements ul.dropdown-menu li {
@@ -1827,6 +1827,7 @@ section {
 }
 
 @media (min-width: 991px) and (max-width: 1100px) {
+
     .journey_wrap {
         min-height: 435px;
     }
@@ -2099,6 +2100,11 @@ section {
 }
 
 @media (max-width: 991px) {
+    .nav-elements ul a,
+    .nav-elements .dropdown-toggle {
+        font-size: 10px;
+    }
+
     .nav-elements .dropdown-menu {
         position: static;
         border: none;
@@ -2133,7 +2139,7 @@ section {
     }
 
     .logo img {
-        width: 170px;
+        width: 130px;
     }
 
     .btn-c1 {
